<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill|fill_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/roundView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/p1tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p1Score"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/p2tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p2Score"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/p3tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p3Score"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/p4tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p4Score"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TableHolderLayout"
            android:layout_width="139dp"
            android:layout_height="match_parent"
            android:layout_weight="0.29" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/clubsPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/diamondsPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/spadesPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/heartsPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/totalPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DeckHolderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/playCard"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onPlayCardPressed"
            android:text="@string/playcard" />

        <Button
            android:id="@+id/nextButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNextButtonPressed"
            android:text="@string/next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSwipeLeftPressed"
                android:text="@string/swipeLeft" />

            <Button
                android:id="@+id/debug"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDebugButtonPressed"
                android:text="@string/Previous" />

            <Button
                android:id="@+id/exit"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onExitPressed"
                android:text="@string/exit" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSwipeRightPressed"
                android:text="@string/swipeRight" />

        </LinearLayout>

        <EditText
            android:id="@+id/bottomTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:ems="10"
            android:singleLine="true" />

        <EditText
            android:id="@+id/bottomTV2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:focusable="false"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</LinearLayout>